--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "luna-magica",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lean98av.github.io/lunaMagica",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0",
+    "install": "^0.13.0",
+    "npm": "^11.6.2"
   }
 }
